Fix project structure and deployment

--- a/index.html
+++ b/index.html
@@ -4,23 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>One Ping Consulting | AI Marketing & Strategic Profiling</title>
-    <meta name="description" content="Premier business consulting firm specializing in AI Marketing, Behavior Profiling, and Professional Coaching with a US Navy Submarine theme." />
-    <meta name="keywords" content="AI Marketing, Behavior Profiling, Professional Coaching, Business Consulting, One Ping Consulting" />
-    
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mjw711.github.io/" />
-    <meta property="og:title" content="One Ping Consulting | AI Marketing & Strategic Profiling" />
-    <meta property="og:description" content="Premier business consulting firm specializing in AI Marketing, Behavior Profiling, and Professional Coaching." />
-    <meta property="og:image" content="https://mjw711.github.io/metadata.json" />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://mjw711.github.io/" />
-    <meta property="twitter:title" content="One Ping Consulting | AI Marketing & Strategic Profiling" />
-    <meta property="twitter:description" content="Premier business consulting firm specializing in AI Marketing, Behavior Profiling, and Professional Coaching." />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>One Ping Consulting</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Montserrat:wght@300;400;600;700&display=swap');
       
@@ -99,4 +83,3 @@
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
- 
