--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"></div><script>console.log("HTML is loaded, script is next");</script>
     <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
